--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "ahooks": "^3.8.1",
     "antd": "^5.21.6",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
