--- a/gaoji/package.json
+++ b/gaoji/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@ant-design/charts": "^2.2.1",
     "@react-spring/web": "^9.7.5",
+    "@reduxjs/toolkit": "^2.3.0",
     "express": "^4.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
+    "react-redux": "^9.1.2",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
